Editing pass on Sec 1 and 2

--- a/latex/description.tex
+++ b/latex/description.tex
@@ -107,6 +107,7 @@
 \newlength\figureheight
 \newlength\figurewidth
 \input{nsf-format}
+\usepackage{enumitem}
 
 %\renewcommand{\captionfont}{\small}
 %\setcaptionmargin{0.05\textwidth}
@@ -120,36 +121,37 @@
 \end{center}
 
 \section{Introduction}
-Analog side-channels (power, electromagnetic, acoustic, etc.) have long been a potential source of attacks that circumvent traditional protections and security measures~\cite{217605,Backes:2010:ASA:1929820.1929847,Balasch2015DPABA,10.1007/978-3-319-66787-4_27,4812164,Chari:2002:TA:648255.752740,Genkin:2016:EKE:2976749.2978353}. This is especially a problem for cyber-physical systems (CPS) and Internet-of-Things (IoT) systems which often contain sensitive data, such as sensor data, login information for over-the-network management of the system and/or accessing back-end cloud infrastructure, and are often placed in publicly accessible  locations. For some side-channels, such as electromagnetic (EM) emanations, physical proximity can be leveraged to attack systems that are considered to be physically secure but are located near publicly accessible locations, e.g., in-wall ``smart building'' sensors, security cameras, etc~\cite{10.1007/978-3-662-48324-4_11,6766222,Camurati:2018:SCE:3243734.3243802,8574570}.
-Many such attacks have been demonstrated over the past several decades, followed by countermeasures that prevent specific attacks by modifying the software that has been demonstrated to leak sensitive information. However, recent analog side channel attacks that were demonstrated by PIs Prvulovic and Zajic have shown that both attacks and mitigation are becoming increasingly dependent on microarchitectural behavior and potentially fragile to future microarchitectural changes~\cite{217605,Monjur21}.
-Unfortunately, early-design tools, such as cycle-accurate (microarchitecture-level) simulators~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm}, do not model analog side channel signals, so these side channels can only be considered when they can be physically measured on already-fabricated chips. At that time, however, time-to-market concerns prevent introduction of overall design changes that would adjust the design tradeoffs in a more desirable direction. Additionally, most software developers have neither the know-how nor the equipment to assess their software’s potential vulnerability to analog side channels, so such considerations are typically either absent or qualitative/abstract when software is designed, giving first-mover advantage to attackers, and resulting in mitigation via localized patches, which themselves are becoming increasingly microarchitecture-dependent.
+Analog side-channels (power, electromagnetic, acoustic, etc.) have long been a potential source of attacks that circumvent traditional protections and security measures~\cite{217605,Backes:2010:ASA:1929820.1929847,Balasch2015DPABA,10.1007/978-3-319-66787-4_27,4812164,Chari:2002:TA:648255.752740,Genkin:2016:EKE:2976749.2978353}. This is especially a problem for cyber-physical systems (CPS) and Internet-of-Things (IoT) systems, which are often placed in publicly accessible locations
+and yet contain sensitive data, such as sensor data, login information for over-the-network management of the system and/or accessing back-end cloud infrastructure.
+For some side-channels, such as electromagnetic (EM) emanations, physical proximity can be leveraged to attack systems that are considered to be physically secure but are located {\em near} publicly accessible locations, e.g., in-wall ``smart building'' sensors, security cameras, etc~\cite{10.1007/978-3-662-48324-4_11,6766222,Camurati:2018:SCE:3243734.3243802,8574570}.
+Many such attacks have been demonstrated over the past several decades, followed by countermeasures that prevent specific attacks by modifying the software that has been demonstrated to leak sensitive information. However, recent analog side channel attacks demonstrated by PIs Prvulovic and Zajic have shown that both attacks and mitigation are becoming increasingly dependent on microarchitectural behavior, making mitigation potentially fragile to future microarchitectural changes~\cite{217605,Monjur21}.
+Unfortunately, early-design tools, such as cycle-accurate (microarchitecture-level) simulators~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm}, do not model analog side channel signals, so these side channels can only be considered when they can be physically measured (post-fabrivation). At that time, however, time-to-market concerns prevent introduction of overall design changes that would adjust the design tradeoffs in a more desirable direction. Additionally, most software developers have neither the know-how nor the equipment to assess their software’s potential vulnerability to analog side channels, so such considerations are typically either qualitative or entirely absent during software design, giving first-mover advantage to attackers, and resulting in mitigation via localized patches, which themselves are becoming increasingly microarchitecture-dependent.
 
-Ideally, the potential for information leakage through analog side channels and ``breaking'' existing software mitigation approaches would be considered in early stages of design for both hardware and software, guided by tools that can predict the impact a specific design has on analog side channels. This would be analogous to how performance and power consumption are predicted by cycle-accurate simulators, which allows the tradeoff between performance, power, and cost to be investigated at design time, years before the first prototype of that processor is fabricated ~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm} If such efficient-yet-highly-accurate simulation would exist for analog side channels, hardware designers and architects could include analog side-channel leakage among their design considerations~\cite{8416860,Althoff:2018:HII:3276539.3276601,Andrysco:2018:TVC:3243734.3243766,cryptoeprint:2018:808,Rane:2016:SPF:3241094.3241101,nayak2017hop}, compilers could use simulation models to optimize for reduced leakage~\cite{Liu:2015:GHS:2694344.2694385,Rane:2015:RCD:2831143.2831171,Gorman:2017:AON:3123939.3123973}, software designers could detect and mitigate information leakage problems for security-sensitive applications~\cite{Wichelmann:2018:MFF:3274694.3274741,Chen:2017:PDS:3133956.3134058,Wu:2018:ETS:3213846.3213851}, etc.
+Ideally,information leakage through analog side channels, and potential for ``breaking'' existing software mitigation approaches, would be considered in early stages of design for both hardware and software, guided by tools that can predict the impact a specific design has on analog side channels. This would be analogous to how performance and power consumption are predicted by cycle-accurate simulators, which allows the tradeoff between performance, power, and cost to be investigated at design time, years before the first prototypes are fabricated ~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm} If such efficient-yet-highly-accurate simulation would exist for analog side channels, computer architects could include analog side-channel leakage among their design considerations~\cite{8416860,Althoff:2018:HII:3276539.3276601,Andrysco:2018:TVC:3243734.3243766,cryptoeprint:2018:808,Rane:2016:SPF:3241094.3241101,nayak2017hop}, compilers could use simulation models to optimize for reduced leakage~\cite{Liu:2015:GHS:2694344.2694385,Rane:2015:RCD:2831143.2831171,Gorman:2017:AON:3123939.3123973}, software designers could detect and mitigate information leakage problems for security-sensitive applications~\cite{Wichelmann:2018:MFF:3274694.3274741,Chen:2017:PDS:3133956.3134058,Wu:2018:ETS:3213846.3213851}, etc.
 
-While there are some tools and metrics to quantify analog side-channel leakages~\cite{Demme:2013:FOM:2485922.2485970,Callan:2014:PMM:2742155.2742179,McCann:2017:TPT:3241189.3241207,Barenghi:2018:SSS:3195970.3196112, yilmaz17tifs}, they are limited due to following reasons: \textit{First}, they are mainly focused on developing metrics to estimate the information leakage itself, i.e., mutual information between the signal and the program secrets, rather than modeling the actual analog signal. Relying only on these metrics rather than analyzing the actual signal may not be sufficient, as these metrics inherently make assumptions about the aspects of the signal the attacker may exploit, i.e., they may not reveal \emph{all} of the information the signal may contain. \textit{Second}, most existing methods only model the system at \textit{architecture-level}, i.e., associating a (leakage) value to individual instructions based on the ISA, and ignore the micro-architecture activities such as pipeline stages, stall cycles, etc. on the signal. As we have demonstrated in our seminal paper on analog side channel modeling~\cite{Nader2020} (these findings will be briefly be summarized in Section~\ref{sec:proposed}), this can lead to significant inaccuracy, mainly because the model, by staying at the ISA-level, neglects to account for how that instruction interacts with other instructions and the underlying hardware.  \textit{Third}, by neglecting the impact of micro-architecture, these methods implicitly assume that the entire hardware design is a \textit{single source} of the combined signal. Such an assumption can lead to large inaccuracies for some side channels because contributions of different microarchitectural blocks (e.g., cache, register-file, etc.) may experience different propagation (e.g. attenuation, low-pass filtering, etc.) to where the overall signal is being measured.
+While there are some tools and metrics to quantify analog side-channel leakage~\cite{Demme:2013:FOM:2485922.2485970,Callan:2014:PMM:2742155.2742179,McCann:2017:TPT:3241189.3241207,Barenghi:2018:SSS:3195970.3196112, yilmaz17tifs}, they are limited in several ways: \textit{First}, they are mainly focused on developing metrics to estimate the information leakage itself, i.e., mutual information between the signal and the program secrets, rather than modeling the actual analog signal. However, these metrics have inherent assumptions about the aspects of the signal the attacker may exploit, so they may not reveal \emph{all} of the information the signal may contain. \textit{Second}, most existing methods only model the system at the \textit{architecture} (ISA) level, associating a (leakage) value to individual instructions based on the ISA, while ignoring how the microarchitecture (pipeline stages, stall cycles, etc.) affects the signal. As we have demonstrated in our seminal paper on analog side channel modeling~\cite{Nader2020} (these findings will be briefly be summarized in Section~\ref{sec:proposed}), this can lead to significant inaccuracy. \textit{Third}, by neglecting the impact of micro-architecture, these methods implicitly assume that the entire hardware design is a \textit{single source} of the combined signal. Such an assumption can lead to large inaccuracies for some side channels (e.g. EM), because contributions of different microarchitectural blocks (e.g., cache, register-file, etc.) may experience different propagation (e.g. attenuation, low-pass filtering, etc.) to where the overall signal is being measured.
 
-The PIs first attempt to address these challenges and develop microarchitecture-level analog side-channel model was presented in \cite{Nader2020}. This work was a proof-of-concept study, showing that efficient yet highly accurate estimation of analog side channel signals is feasible, not only for individual instructions but also for sequences of instructions (when the goal is to assess and improve leakage from a particular piece of code on a set of hardware platforms). This model is also the first to asses leakage from a particular part of the system (when the goal is to make the design less ``leaky''), while maintaining the performance advantages of a cycle-accurate simulation relative to gate-level or physics-based models. While the proposed model was good enough to demonstrate feasibility, and can serve as an excellent starting point for our proposed work (as will be discussed in Section~\ref{sec:proposed}), it used a number of simplifications that limit its ability to model more complex processors and limit its accuracy.
+The PIs first attempt to address these challenges and develop microarchitecture-level analog side-channel model, was called EMSim~\cite{Nader2020}. That proof-of-concept study has shown that efficient, yet highly accurate, estimation of analog side channel signals is feasible, allowing modeling of numerous entire-program runs, e.g. to assess and improve leakage from a particular piece of code on a set of hardware platforms. EMSim was also the first model to asses leakage from a particular part of the system (when the goal is to make the design less ``leaky'') while maintaining the performance advantages of a cycle-accurate simulation relative to gate-level or physics-based models. However, while EMSim was good enough to demonstrate feasibility (and to serve as an excellent starting point for our proposed work, as will be discussed in Section~\ref{sec:proposed}), it used a number of simplifications that limit its accuracy and its ability to model more complex processors.
 
 \subsection{Proposed Research Work}
-To address these issues and allow analog side channels to be treated as first-class design considerations, we propose to develop methods that would allow microarchitecture-level simulation to generate highly accurate analog side channel signals, even for sophisticated processors (deep pipelines, superscalar, out-of-order). Specifically, the proposed research consists of developing four main thrusts:
+To address these issues and allow analog side channels to be treated as first-class design considerations, we propose to develop methods that would allow microarchitecture-level simulation to generate highly accurate analog side channel signals, even for sophisticated processors (deep pipelines, superscalar, out-of-order). Specifically, the proposed research has four main thrusts:
 
-\begin{enumerate}
-\item Methods that allow microarchitecture-level simulation to produce highly accurate analog side channel signals, along with per-block and per-code-region breakdowns and attribution to help computer architects and software developers assess the impacts of microarchitectural and software changes on the tradeoff between performance, power, and side channel leakage. Our overall approach to this will be to generate detailed event timestaps and use them to combine per-event signal snippets into the overall side channel signal.
-\item Methods for efficiently performing circuit-level simulation of caches, functional units, and other building blocks of the processor, to provide per-event timelines for voltage, current, and possibly other metrics that are needed to construct signal snippets for various side channels, along with other useful information such as how much the values of the metrics depend on data values.
-\item Methods that produce per-event signal snippets for various side channels, by 1) transforming the outputs of circuit-level simulation, 2) decomposing measured signals, or 3) synergistically combining both methods, and methods that estimate per-block scaling factors for adding these snippets to the overall analog side channel signals.
-\item Methods that validate simulated signals against measurements, and to adjust scaling factors, signal snippets, and the simulator's timing parameters to calibrate snippets, weights, and timing parameters to a real processor.
+\begin{enumerate}[topsep=0pt,itemsep=0pt]
+\item New methods that allow microarchitecture-level simulation to produce highly accurate analog side channel signals, along with per-block and per-code-region breakdowns/attribution to help computer architects and software developers assess how microarchitecture and software changes would affect the tradeoff between performance, power, and side-channel leakage. Our overall approach to this will be to combine per-event signal snippets into the overall side channel signal using event times from cycle-accurate simulation.
+\item New methods for efficiently performing circuit-level simulation of caches, functional units, and other building blocks of the processor, to provide per-event timelines for voltage, current, and possibly other metrics that are needed to construct signal snippets for various side channels, along with other useful information such as how much the values of the metrics depend on data values.
+\item New methods that produce per-event signal snippets for various side channels, by 1) transforming the outputs of circuit-level simulation, 2) decomposing measured signals, or 3) synergistically combining both methods. This thrust will also explore new methods that estimate per-block scaling factors for contributions of these snippets to the overall analog side channel signals.
+\item New methods that validate simulated signals against measurements, and to adjust scaling factors, signal snippets, and the simulator's timing parameters to calibrate snippets, weights, and timing parameters to a real processor.
 \end{enumerate}
 
  %If successful, our work will demonstrate the feasibility of modeling analog side-channels at the microarchitectural level and provide proof-of-concept integration of such modeling into a cycle-accurate simulator. This will allow analog side channels to become a first-class consideration, along with performance and power, in processor designs, allowing computer architects to avoid introducing significant new vulnerabilities and ``breaking'' existing software mitigation, and possibly even to reduce leakage and/or enable new mitigation. It would also allow programmers and even compilers to include analog side channel considerations in their tradeoff space during design and/or optimization.
 \subsection{Broader Impacts}
-We expect that our results will help the inclusion of analog side channels among early design considerations and will help reduce the cost of side-channel resistant designs by addressing side-channel-related problems early in the design process, when side-channel resilience may be improved (or preserved) with little or no sacrifice in performance, power, cost, weight, etc. The proposed work is inherently interdisciplinary, combining expertise in computer architecture and circuits, hardware security, electromagnetic, and signal processing. Thus this research has the potential to improve the state of the art and have broader impacts in all these areas. Also, participating students will be working in a truly multidisciplinary context, which will broaden their expertise in ways otherwise not possible as well as {\bf broaden participation in computing}. The proposal also includes 1) developing an interactive demonstrator for the general public, to educate and raise awareness about several key cyber-security concepts and issues, 2) visits and activities in local schools to improve K-12 education and participation of women and minorities in STEM, and 3) course and curriculum development activities at the undergraduate and graduate level.
+We expect that our results will help include analog side channels among early-design considerations, which will help reduce the cost of side-channel resistant designs by addressing side-channel-related problems early in the design process, when side-channel resilience may be improved (or preserved) with little or no sacrifice in performance, power, cost, weight, etc. The proposed work is inherently interdisciplinary, combining expertise in computer architecture and circuits, hardware security, electromagnetic, and signal processing. Thus this research has the potential to improve the state of the art and have broader impacts in all these areas. Also, participating students will be working in a truly multidisciplinary context, which will broaden their expertise in ways that are otherwise not possible. The proposal also includes 1) developing an interactive demonstrator for the general public, to educate and raise awareness about several key cybersecurity concepts and issues, 2) visits and activities in local schools to improve K-12 education, and to  encourage participation of women and minorities in STEM, 3) course and curriculum development activities at the undergraduate and graduate level, and 4) activities to broaden participation in computing (as discussed in our BPC plan).
 \section{Related Work}
-There is a large body of work focused on preventing particular side-channel attacks, e.g., ~\cite{Backes:2010:ASA:1929820.1929847,Nazari:2017:EED:3079856.3080223,Demme:2013:FOM:2485922.2485970,Han:2017:WMB:3133956.3134081,Liu:2016:CET:2976749.2978299,6987331,He:2017:SYC:3123939.3124546,217605,Monjur21}, either by removing the tie between sensitive information and the side-channel signal, or by
-trying to make the signal more difficult to measure. However, such work mostly focuses on preventing a particular side
-channel attack in a very specific piece of code and are less focused about the fundamental relationship between the hardware, software, and the side-channel signal.
+There is a large body of work focused on preventing specific side-channel attacks, e.g., ~\cite{Backes:2010:ASA:1929820.1929847,Nazari:2017:EED:3079856.3080223,Demme:2013:FOM:2485922.2485970,Han:2017:WMB:3133956.3134081,Liu:2016:CET:2976749.2978299,6987331,He:2017:SYC:3123939.3124546,217605,Monjur21}, either by removing the tie between sensitive information and the side-channel signal, or by
+trying to make the signal more difficult to measure, with less focus on the fundamental relationships between hardware, software, and side-channel signals.
 
 Strategies for quantifying potential side channel exposure at the micro-architectural and architectural levels are still
-an open problem. Existing work proposed different methods and/or metrics to estimate the leakage either for a specific type of side-channel (e.g., cache, power, EM, etc.) or alternatively, as a generic framework to estimate the overall leakage for any given side-channel.
+an open problem. Existing work proposed different methods and/or metrics to estimate the leakage either for a specific type of side-channel (e.g., cache, power, EM, etc.) or, alternatively, as a generic framework to estimate the overall leakage for any given side-channel.
 
 Side-Channel Vulnerability Factor (SVF)~\cite{Demme:2013:FOM:2485922.2485970} measures how the side-channel signal correlates with
 high-level execution patterns (e.g., program phase transitions).
@@ -161,36 +163,28 @@ features are the strongest leakers, and to 2) software developers
 about how to reduce the side-channel leakiness of their
 code.
 
-To address these limitations, Signal Available to Attacker (SAVAT) method~\cite{Callan:2014:PMM:2742155.2742179} was proposed. SAVAT measures the side-channel signal (particularly EM and power from laptops) created by a specific single-instruction difference
-in program execution, i.e., the amount of signal made available
-to a potential attacker who wishes to decide whether the
-program has executed instruction/event A or instruction/event B. These measurements can be used
+Signal Available to Attacker (SAVAT)~\cite{Callan:2014:PMM:2742155.2742179} measures the side-channel signal (particularly, EM and power from laptops) created by a specific single-instruction difference in program execution, i.e., the amount of signal made available
+to a potential attacker who wishes to decide whether the program has executed instruction/event A or instruction/event B. These measurements can be used
 to determine the potential for information leakage when
-execution of individual instructions or even sections of code
-depend on sensitive information. Unfortunately, SAVAT only models the system at ISA-level and ignores the underlying relation of each instruction to the hardware or other instructions in the sequence. Extensions of SAVAT that include modeling instructions overlapping in pipeline have been proposed in \cite{baki17}, \cite{Baki_2020a}.
+execution of individual instructions, or even sections of code,
+depend on sensitive information. Unfortunately, SAVAT only models the system at the ISA level, ignoring the underlying relation of each instruction to the hardware or other instructions in the sequence. Extensions of SAVAT that include modeling instruction in a simple pipeline have also been proposed~\cite{baki17,Baki_2020a}.
 
-Similar to SAVAT, McCann \textit{et al.}~\cite{McCann:2017:TPT:3241189.3241207} proposed a modeling technique capable of
-producing a leakage metric at instruction-level for power (and/or
-EM) side-channel signals on ARM M0/M4 cores. To estimate the leakage for individual instructions, the proposed method  only requires knowledge about different characteristics of the system at ISA-level such as data-dependent effects of neighboring
-instructions in a sequence, register effects, bit-flips, etc. Similar to SAVAT, while the method proposed by McCann \textit{et al.}~\cite{McCann:2017:TPT:3241189.3241207} provides interesting insights about possible sources of leakage, it also ignores the effects of micro-architecture events such as cache miss, branch miss-prediction, etc. on the signal.
+McCann \textit{et al.}~\cite{McCann:2017:TPT:3241189.3241207} proposed a modeling technique capable of producing an instruction-level leakage metric for power and EM side-channel signals on ARM M0/M4 cores. To estimate the leakage for individual instructions, that method only requires knowledge about different ISA-level characteristics of the system, such as data-dependent effects of neighboring instructions in a sequence, register effects, bit-flips, etc. Similarly to SAVAT, the effects of micro-architecture events such as (cache miss, branch miss-prediction, etc.) are largely ignored.
 
-The method proposed by Barenghi and Pelosi~\cite{Barenghi:2018:SSS:3195970.3196112} calculates the leakage for individual instructions by measuring the power consumption between two consecutive cycles and employs the Pearson correlation coefficient between the two measurements. To calculate the leakage, in addition to leveraging the ISA-level information, pipeline model was also used. However, the framework did not consider any micro-architecture events, nor pipeline stalls and only accounts the number of cycles that takes for each instruction to execute. It also did not model the individual effect of each stage on the others and the overall signal.
+Barenghi and Pelosi~\cite{Barenghi:2018:SSS:3195970.3196112} proposed a method that calculates leakage for individual instructions by measuring power consumption between two consecutive cycles and employs the Pearson correlation coefficient between the two measurements. To calculate the leakage, in addition to leveraging  ISA-level information, a pipeline model was also used. However, the framework did not consider pipeline stalls or any other micro-architecture events, and did not model the individual effect of each stage on the others and the overall signal.
 
-Another approach to quantifying side channel leakage is to use information theory and estimate capacity of analog side channels. Millen was the first to establish a connection between Shannon's information theory and information flow models in computer systems~\cite{Millen87}
-and calculated the capacity (maximum possible data rate) of such a side-channel.
-However, that model assumes a synchronous channel (where information is transmitted at a constant rate that is known to the receiver),
-and this is not a realistic assumption for analog side-channels in computer systems, where the timing of execution in the spy program varies
+Another approach to quantifying side-channel leakage is to use information theory and estimate capacity of analog side channels. Millen was the first to establish a connection between Shannon's information theory and information flow models in computer systems~\cite{Millen87}, and to calculate the capacity (maximum possible data rate) of such a side-channel.
+However, that model assumes a synchronous channel (where information is transmitted at a constant rate that is known to the receiver); this is not a realistic assumption for analog side-channels in computer systems, where the timing of execution in the spy program varies
 due to a number of hardware features (e.g., pipeline stalls, dynamic scheduling of instructions, cache hits and misses, branch prediction, etc.).
-Additionally, analog side-channels often include insertion, deletion, and errors, e.g., interrupts and other system activities often insert activity into the timeline of the spy program's execution. There are many papers that discuss bounds on the capacity of channels corrupted by synchronization errors
-~\cite{Wang05}, \cite{Anderson98}, \cite{Crespi13}, \cite{Davey01}, \cite{Ramachandran11}, \cite{Kirsch10}, \cite{Hu10}, bounds on the capacity of channels corrupted with synchronization and substitution errors \cite{Verdu10}, \cite{Duman13}, \cite{Tarokh12}, or bounds on the capacity when codewords have variable length but no errors in the channel \cite{Verdu10}, \cite{Shannon:InfoPaper}, none of them provides the answer to how much information is ``transmitted'' by execution of particular sequence of instructions that do not have equal timing and are transmitted through erroneous channel.
-The first attempts to answer this question were presented in \cite{baki18icassp,baki18milcom}, where covert channels are generated, and upper and lower leakage capacities were derived. In \cite{baki17}, a side channel leakage capacity is derived for a discrete memoryless channel where it was assumed that each transmitted quantum of information (i.e., instruction in the code) is mutually independent but do not have equal length. Although all these papers make an important step toward assessing information leakage from side-channels, they fall short of considering the relationship among sequence of instructions, which is a result of program functionality as well as a processor pipeline depth, which impacts how much signal energy will be emanated.
-In \cite{Baki_2020a}, side-channel information capacity created by execution of series of instructions (e.g., a function, a procedure, or a program) in a processor is derived. To model dependence among program instructions in a code, we use Markov Source model, which includes the dependencies that exist in instruction sequence since each program code is written systematically to perform a specific task. The presented  framework  considers processors as the transmitters of a communication system with multiple antennas. The antennas correspond to different pipeline stages of any processor. Moreover, inputs of the transmitter show dependency based on a Markov model which reflects the practicality of a program. Using this setup, we have obtained the channel capacity of a communication system which represents the severity of the side channels. However, none of these approaches provide enough details to model analog side channels taking into consideration microarchitecture details.
+Additionally, analog side-channels often include insertion, deletion, and errors, e.g., interrupts and other system activity often inserts activity into the timeline of the spy program's execution. 
+While~\cite{baki18icassp,baki18milcom,baki17} derive bounds for information leakage from side-channels with insertions, deletions, and errors, but fall short of considering how executed instructions affect each other through their interaction with the microarchitecture,
+and that can significantly impact the signal. Side-channel information capacity created by execution of a sequence of instructions was also derived by PIs Zajic and Prvulovic and their students~\cite{Baki_2020a}, using a Markov Source model to account for dependencies among instructions, treating a processor as a transmitter with multiple ``antennas'', where each antenna corresponds to a pipeline stage. While these capacity-based approaches can
+represent the worst-case severity of side channel leakage, none of them provides enough detail to identify specific vulnerabilities and/or attribute leakage to specific hardware blocks or program code.
 
 Another body of work related to this proposal are the cycle-accurate models/tools to simulate power and/or microarchitecture~\cite{Li:2009:MIP:1669112.1669172,Li:2011:CAM:2132325.2132479,509850,Ardestani:2013:EFM:2495252.2495480,Binkert:2011:GS:2024716.2024718,sesc,5982026,carlson2014aeohmcm}. While these models can accurately model the power consumption at each cycle, they are different from this work and hence may not be a proper tool for simulating analog side-channel signals for two main reasons: \textit{First}, while these methods do consider the activity factor to calculate power, they often treat all the bit-flips equally. However, as shown in \cite{Nader2020}, depending on the design, not all flips equally contribute to the overall signal. Ignoring this fact can lead to inaccurate modeling. \textit{Second}, depending on the architecture, different stages might have different effect on each other and the overall signal. Without properly modeling these effects, the overall signal can not be modeled.
 
-Also related to this work are work on leveraging EM signals for program profiling, tracking, and analysis~\cite{7783762,Gorman:2017:AON:3123939.3123973,Elvan2021,Zop, Zop2,Moumita2018,Moumita2022}. Spectral Profiling methods~\cite{7783762,Zop,Zop2,Elvan2021} tracks program execution at different granularity from loops \cite{7783762}, to basic blocks \cite{Zop,Zop2} and individual instructions \cite{Elvan2021}. \textsc{EMProf} profiles memory \cite{Moumita2018} and \textsc{Primer} profiles interrupts \cite{Moumita2022}, both leveraging electromagnetic (EM) emanations from devices. By continuously analyzing these EM emanations, \textsc{EMProf} identifies where in the signal's timeline each period of stalling begins and ends, allowing it to both identify the memory events that affect performance the most (LLC misses) and measure the actual performance impact of each such event (or overlapping group of events). Because \textsc{EMProf} is completely external to the profiled system, it does not change the behavior of the profiled system in any way, and requires no hardware support, no memory or other resources, and no instrumentation on the profiled system. Similarly, \textsc{Primer} analyzes the device's external EM side-channel signal in real-time, without any interference with the device's program execution, while providing a detailed analysis of not only the overall overhead created by interrupts, but also their distribution over time (i.e., exact occurrence of interrupts in program execution time-line). As the CPU follows a generic procedure to handle such asynchronous system events, our approach can be generalized and applied to all non-deterministic interrupts across multiple platforms. More details on both methods are presented in following sections. All these methods are complimentary to this proposal and combined with proposed modeling tool can enhance leakage estimation, compiler development, etc.
-
-However, none of them address the need for developing microarchitecture-level analog side-channel tool such that allows for integration of such modeling into a cycle-accurate simulator. This, in turn, would allow analog side channels to become a first-class consideration, along with performance and power, in processor designs, allowing computer architects to avoid introducing significant new vulnerabilities and ``breaking'' existing software mitigation, and possibly even to reduce leakage and/or enable new mitigation.
+The relationship between executed instructions, microarhitecture, and the resulting side-channel signals is also explored by work on leveraging EM signals for program profiling, tracking, and analysis~\cite{7783762,Gorman:2017:AON:3123939.3123973,Elvan2021,Zop, Zop2,Moumita2018,Moumita2022}. Spectral Profiling methods~\cite{7783762,Zop,Zop2,Elvan2021} track program execution at loop \cite{7783762}, basic-block \cite{Zop,Zop2}, or individual-instruction~\cite{Elvan2021} granularity.
+\textsc{EMProf}~\cite{Moumita2018} profiles cache misses and \textsc{Primer}~\cite{Moumita2022} profiles interrupts, both leveraging electromagnetic (EM) emanations from devices. By continuously analyzing these EM emanations, \textsc{EMProf} identifies where in the signal's timeline each period of stalling begins and ends, allowing it to identify LLC miss events and to measure the actual performance impact of each such event (or overlapping group of events). Because \textsc{EMProf} is completely external to the profiled system, it does not change the behavior of the profiled system in any way, and requires no hardware support, no memory or other resources, and no instrumentation on the profiled system. Similarly, \textsc{Primer} analyzes the device's external EM side-channel signal in real-time, without any interference with the device's program execution, while providing a detailed analysis of not only the overall overhead created by interrupts, but also their distribution over time (i.e., exact occurrence of interrupts in program execution time-line). All these methods are complementary to this proposal and combined with proposed modeling tool can enhance leakage estimation, compiler development, etc.
 
 \section{Proposed Research}
 \label{sec:proposed}
